# DevSpell

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  .gitignore  DOCKER_SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20251119_0909_df0c6e7f9905_add_users_table_for_authentication.py  20251119_1127_5c1612cd246b_add_projects_table.py  20251119_1127_dae2eaa2ec50_merge_heads.py  20251120_0000_update_analysis_table_add_relations.py  bb699075faa1_initial_migration.py
backend/scripts/: init-db.sh
backend/src/: main.py
backend/src/analysis/: __init__.py  router.py  schemas.py
backend/src/api/routes/: ai.py  analyze.py  health.py
backend/src/auth/: dependencies.py  models.py  router.py  schemas.py  security.py
backend/src/core/: config.py  database.py  logger.py
backend/src/models/: analyze.py  database.py
backend/src/projects/: models.py  router.py  schemas.py
backend/src/repositories/: analysis_repository.py
backend/src/services/: ast_visitor.py  code_analyzer.py
backend/src/services/ai/: __init__.py  base.py  ollama_provider.py  prompts.py
backend/tests/: test_analyze_endpoint.py  test_analyzer.py  test_database.py  test_health.py
docs/: coding-standards.md  development-workflow.md  git-workflow.md  project-architecture.md  project-overview.md  respuesta-claude-planificacion.md  sprint-1-backend-base.md  sprint-2-analyze-endpoint.md  sprint-3-database-postgresql.md
frontend/: package-lock.json
frontend/app/: layout.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/projects/[id]/analyze/: page.tsx
frontend/app/projects/[id]/history/: page.tsx
frontend/app/projects/[id]/history/[analysisId]/: page.tsx
frontend/app/register/: page.tsx
frontend/components/ai/: SuggestionsPanel.tsx
frontend/components/analyzer/: AnalysisResults.tsx  CodeEditor.tsx
frontend/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/components/layout/: Navbar.tsx
frontend/components/projects/: ProjectCard.tsx  ProjectModal.tsx
frontend/components/ui/: ConfirmDialog.tsx  Toast.tsx
frontend/lib/api/: ai.ts  analysisHistory.ts  analyzer.ts  auth.ts  client.ts  projects.ts
frontend/types/: index.ts
