[project]
name = "devspell-backend"
version = "0.1.0"
description = "DevSpell Backend - Análisis de código con IA"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",

    "psycopg2-binary>=2.9.11",

    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.12",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",

]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1",
    "pytest-asyncio>=0.23.0",
]
